--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=Shujuku2024!
 spring.jpa.properties.hibernate.dailect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=shaliwa
+spring.security.user.password=shaliwa
+spring.security.user.roles=ADMIN
